--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,2 @@
-bin/Debug/net9.0/repro.deps.json
-bin/Debug/net9.0/repro.dll
-bin/Debug/net9.0/repro.pdb
-bin/Release/net9.0/repro.deps.json
-bin/Release/net9.0/repro.dll
-bin/Release/net9.0/repro.pdb
-obj/project.assets.json
-obj/project.nuget.cache
-obj/repro.csproj.nuget.dgspec.json
-obj/repro.csproj.nuget.g.props
-obj/repro.csproj.nuget.g.targets
-obj/Debug/net9.0/.NETCoreApp,Version=v9.0.AssemblyAttributes.cs
-obj/Debug/net9.0/repro.AssemblyInfo.cs
-obj/Debug/net9.0/repro.AssemblyInfoInputs.cache
-obj/Debug/net9.0/repro.assets.cache
-obj/Debug/net9.0/repro.csproj.CoreCompileInputs.cache
-obj/Debug/net9.0/repro.csproj.FileListAbsolute.txt
-obj/Debug/net9.0/repro.dll
-obj/Debug/net9.0/repro.GeneratedMSBuildEditorConfig.editorconfig
-obj/Debug/net9.0/repro.pdb
-obj/Debug/net9.0/repro.sourcelink.json
-obj/Debug/net9.0/ref/repro.dll
-obj/Debug/net9.0/refint/repro.dll
-obj/Release/net9.0/.NETCoreApp,Version=v9.0.AssemblyAttributes.cs
-obj/Release/net9.0/repro.AssemblyInfo.cs
-obj/Release/net9.0/repro.AssemblyInfoInputs.cache
-obj/Release/net9.0/repro.assets.cache
-obj/Release/net9.0/repro.csproj.CoreCompileInputs.cache
-obj/Release/net9.0/repro.csproj.FileListAbsolute.txt
-obj/Release/net9.0/repro.dll
-obj/Release/net9.0/repro.GeneratedMSBuildEditorConfig.editorconfig
-obj/Release/net9.0/repro.pdb
-obj/Release/net9.0/repro.sourcelink.json
-obj/Release/net9.0/ref/repro.dll
-obj/Release/net9.0/refint/repro.dll
+bin/
+obj/
